--- a/css/style.css
+++ b/css/style.css
@@ -177,6 +177,89 @@ header .menu__wrapper .menu {
 header .menu__wrapper .menu a:hover {
   color: rgb(60, 96, 139);
 }
+header .menu__burger__wrapper {
+  display: none;
+}
+header .menu__burger__wrapper .burger-checkbox {
+  position: absolute;
+  z-index: 9999;
+  opacity: 0;
+  background-color: red;
+  width: 42px;
+  height: 42px;
+  margin-left: -1px;
+  margin-top: -8px;
+}
+header .menu__burger__wrapper .burger-checkbox:checked + .burger::before {
+  top: 11px;
+  transform: rotate(45deg);
+  box-shadow: 0 6px 0 rgba(0, 0, 0, 0);
+  transition: box-shadow 0.15s, top 0.3s, transform 0.3s 0.15s;
+  background-color: rgb(100, 141, 190);
+}
+header .menu__burger__wrapper .burger-checkbox:checked + .burger::after {
+  bottom: 11px;
+  transform: rotate(-45deg);
+  transition: bottom 0.3s, transform 0.3s 0.15s;
+  background-color: rgb(100, 141, 190);
+}
+header .menu__burger__wrapper .burger-checkbox:checked ~ .menu-list {
+  display: grid;
+  padding-top: 5%;
+  align-content: space-around;
+  position: fixed;
+  background-color: rgb(52, 84, 122);
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+}
+header .menu__burger__wrapper .burger {
+  position: relative;
+  z-index: 999;
+  cursor: pointer;
+  display: block;
+  position: relative;
+  border: none;
+  background: transparent;
+  width: 40px;
+  height: 26px;
+}
+header .menu__burger__wrapper .burger::before, header .menu__burger__wrapper .burger::after {
+  content: "";
+  left: 0;
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 4px;
+  border-radius: 10px;
+  background: #000;
+}
+header .menu__burger__wrapper .burger::before {
+  top: 0;
+  box-shadow: 0 11px 0 #000;
+  transition: box-shadow 0.3s 0.15s, top 0.3s 0.15s, transform 0.3s;
+}
+header .menu__burger__wrapper .burger::after {
+  bottom: 0;
+  transition: bottom 0.3s 0.15s, transform 0.3s;
+}
+header .menu__burger__wrapper .menu-list {
+  position: absolute;
+  display: none;
+  z-index: 2;
+}
+header .menu__burger__wrapper .menu-list .menu-item {
+  display: block;
+  padding: 8px;
+  color: white;
+  font-size: 18px;
+  text-align: center;
+  text-decoration: none;
+}
+header .menu__burger__wrapper .menu-list .menu-item:hover {
+  background: rgba(255, 255, 255, 0.2);
+}
 
 .main__title {
   background-color: rgb(238, 239, 241);
@@ -443,5 +526,15 @@ footer .footer__wrapper .footer__protection {
   }
   .demo__video__wrapper .demo__video__icon {
     scale: 0.6;
+  }
+  footer .footer__wrapper {
+    padding: 15px 0;
+  }
+  footer .footer__wrapper .footer__author {
+    margin-bottom: 0;
+    font-size: 16px;
+  }
+  footer .footer__wrapper .footer__protection {
+    font-size: 12px;
   }
 }
