--- a/scss/style.scss
+++ b/scss/style.scss
@@ -32,26 +32,23 @@ $robotoM           : 'RobotoM';
 
 
 
+
 h1,
 h2 {
     font-family: $robotoM;
 }
 
-
 h1 {
     font-size: $h1_Title_Size;
 }
-
 
 h2 {
     font-size: $h2_Title_Size;
 }
 
-
 h5 {
     font-size: 21px;
 }
-
 
 p {
     font-size  : $body_Title_Size;
@@ -59,20 +56,15 @@ p {
     line-height: 24px;
 }
 
-
 a {
     text-decoration: none;
     color          : black;
 }
 
-
 body {
     font-family     : $robotoR;
     background-color: rgb(249, 249, 249);
 }
-
-
-
 
 header {
     width           : 100%;
@@ -84,7 +76,7 @@ header {
 
 
     .menu__wrapper {
-        width     : $main_Wrapper_Width;
+        width: $main_Wrapper_Width;
 
 
         .menu {
@@ -93,14 +85,112 @@ header {
             justify-self         : start;
             gap                  : 42px;
 
-
             a:hover {
                 color: $brand_Color-hover;
             }
         }
     }
-}
 
+    .menu__burger__wrapper {
+        display: none;
+
+        .burger-checkbox {
+            position        : absolute;
+            z-index         : 9999;
+            opacity         : 0;
+            background-color: red;
+            width           : 42px;
+            height          : 42px;
+            margin-left     : -1px;
+            margin-top      : -8px;
+
+            &:checked+.burger {
+
+                &::before {
+                    top             : 11px;
+                    transform       : rotate(45deg);
+                    box-shadow      : 0 6px 0 rgba(0, 0, 0, 0);
+                    transition      : box-shadow .15s, top .3s, transform .3s .15s;
+                    background-color: rgb(100, 141, 190);
+                }
+
+                &::after {
+                    bottom          : 11px;
+                    transform       : rotate(-45deg);
+                    transition      : bottom .3s, transform .3s .15s;
+                    background-color: rgb(100, 141, 190);
+                }
+            }
+
+            &:checked~.menu-list{
+               
+                display: grid;
+                padding-top: 5%;
+                align-content: space-around;
+                position: fixed;
+                background-color: $brand_Color;
+                width: 100vw;
+                height: 100vh;
+                top: 0;
+                left: 0;
+            }
+        }
+
+        .burger {
+            position  : relative;
+            z-index   : 999;
+            cursor    : pointer;
+            display   : block;
+            position  : relative;
+            border    : none;
+            background: transparent;
+            width     : 40px;
+            height    : 26px;
+
+            &::before,
+            &::after {
+                content      : '';
+                left         : 0;
+                position     : absolute;
+                display      : block;
+                width        : 100%;
+                height       : 4px;
+                border-radius: 10px;
+                background   : #000;
+            }
+
+            &::before {
+                top       : 0;
+                box-shadow: 0 11px 0 #000;
+                transition: box-shadow .3s .15s, top .3s .15s, transform .3s;
+            }
+
+            &::after {
+                bottom    : 0;
+                transition: bottom .3s .15s, transform .3s;
+            }
+        }
+
+        .menu-list {
+            position  : absolute;
+            display: none;
+            z-index   : 2;
+
+            .menu-item {
+                display        : block;
+                padding        : 8px;
+                color          : white;
+                font-size      : 18px;
+                text-align     : center;
+                text-decoration: none;
+
+                &:hover {
+                    background: rgba(255, 255, 255, 0.2);
+                }
+            }
+        }
+    }
+}
 
 
 .main__title {
@@ -110,22 +200,18 @@ header {
     justify-items   : center;
     padding-bottom  : 100px;
 
-
     .main__title__wrapper {
         width      : $main_Wrapper_Width;
         padding-top: 258px;
-
 
         h1 {
             margin-bottom: 60px;
         }
 
-
         p {
             width        : 540px;
             margin-bottom: 65px;
         }
-
 
         button {
             padding         : 18px 40px;
@@ -133,7 +219,6 @@ header {
             background-color: $brand_Color;
             color           : white;
             cursor          : pointer;
-
 
             &:hover {
                 background-color: $brand_Color-hover;
@@ -143,25 +228,21 @@ header {
 }
 
 
-
 .about__title {
     display       : grid;
     justify-items : center;
     padding-top   : 100px;
     padding-bottom: 100px;
 
-
     .about__title__wrapper {
         display      : grid;
         justify-items: center;
         width        : $main_Wrapper_Width;
 
-
         h2 {
             margin-bottom: 50px;
             text-align   : center;
         }
-
 
         p {
             width     : 540px;
@@ -169,7 +250,6 @@ header {
         }
     }
 }
-
 
 
 .portfolio {
@@ -180,13 +260,11 @@ header {
     width           : 100%;
     justify-content : space-around;
 
-
     .portfolio__wrapper {
         width                : $main_Wrapper_Width;
         display              : grid;
         justify-items        : center;
         grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-
 
         .work__card {
             display              : grid;
@@ -301,6 +379,12 @@ footer {
         }
     }
 }
+
+
+
+
+
+
 
 
 
@@ -489,7 +573,7 @@ footer {
         }
     }
 
-    
+
     .demo__video__wrapper {
         margin-bottom: 50px;
     }
@@ -553,9 +637,26 @@ footer {
     .demo__video__wrapper {
         margin-bottom: 50px;
 
-        
+
         .demo__video__icon {
             scale: 0.6;
         }
+    }
+
+    footer{
+
+        .footer__wrapper{
+            padding: 15px 0;
+
+            .footer__author{
+                margin-bottom: 0;
+                font-size: 16px;
+            }
+
+            .footer__protection{
+                font-size: 12px;
+            }
+        }
+
     }
 }
