--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,12 +3,12 @@
 
 @font-face {
     font-family: 'RobotoR';
-    src        : url('/fonts/Roboto-Regular.ttf');
+    src        : url('/scss-landing/fonts/Roboto-Regular.ttf');
 }
 
 @font-face {
     font-family: 'RobotoM';
-    src        : url('/fonts/Roboto-Medium.ttf');
+    src        : url('/scss-landing/fonts/Roboto-Medium.ttf');
 }
 
 $brand_Color       : rgb(52, 84, 122);
@@ -266,7 +266,7 @@ header {
 
 
             .work__card__icon {
-                background-image : url(/img/project.svg);
+                background-image : url(/scss-landing/img/project.svg);
                 background-repeat: no-repeat;
                 width            : 50px;
                 height           : 50px;
@@ -318,7 +318,7 @@ header {
     }
 
     .demo__video__icon {
-        background-image : url(/img/play-button.svg);
+        background-image : url(/scss-landing/img/play-button.svg);
         background-repeat: no-repeat;
         width            : 100px;
         height           : 100px;
